# eragp

./: .gitignore  CMakeLists.txt  Dockerfile  FoodEntity.h  LivingEntity.cpp  LivingEntity.h  Main.cpp  README.md  Renderer.cpp  Renderer.h  World.cpp  install_cmake.sh
ausarbeitung/: Ausarbeitung.tex
ausarbeitung/data/timespent/himmuc-logs/: himmuc-timespent-log-1-0.csv  himmuc-timespent-log-10-0.csv  himmuc-timespent-log-10-1.csv  himmuc-timespent-log-10-2.csv  himmuc-timespent-log-10-3.csv  himmuc-timespent-log-10-4.csv  himmuc-timespent-log-10-5.csv  himmuc-timespent-log-10-6.csv  himmuc-timespent-log-10-7.csv  himmuc-timespent-log-10-8.csv  himmuc-timespent-log-10-9.csv  himmuc-timespent-log-2-0.csv  himmuc-timespent-log-2-1.csv  himmuc-timespent-log-3-0.csv  himmuc-timespent-log-3-1.csv  himmuc-timespent-log-3-2.csv  himmuc-timespent-log-4-0.csv  himmuc-timespent-log-4-1.csv  himmuc-timespent-log-4-2.csv  himmuc-timespent-log-4-3.csv  himmuc-timespent-log-5-0.csv  himmuc-timespent-log-5-1.csv  himmuc-timespent-log-5-2.csv  himmuc-timespent-log-5-3.csv  himmuc-timespent-log-5-4.csv  himmuc-timespent-log-6-0.csv  himmuc-timespent-log-6-1.csv  himmuc-timespent-log-6-2.csv  himmuc-timespent-log-6-3.csv  himmuc-timespent-log-6-4.csv  himmuc-timespent-log-6-5.csv  himmuc-timespent-log-7-0.csv  himmuc-timespent-log-7-1.csv  himmuc-timespent-log-7-2.csv  himmuc-timespent-log-7-3.csv  himmuc-timespent-log-7-4.csv  himmuc-timespent-log-7-5.csv  himmuc-timespent-log-7-6.csv  himmuc-timespent-log-8-0.csv  himmuc-timespent-log-8-1.csv  (+15 more)
ausarbeitung/data/timespent/maimuc-logs/: log1-0.csv  log1-1.csv  log1-2.csv  log1-3.csv  log1-4.csv  log1-5.csv  log1-6.csv  log1-7.csv  log1-8.csv  log1-9.csv  log2-0.csv
ausarbeitung/res/: overview.puml
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
doc/puml/: overviewV1.puml
include/SDL/: cleanup.h  res_path.h
performance/: himmuc-no-scaling.sh  himmuc-strong-scaling.sh  himmuc-threads-vs-processes.sh  himmuc-threads.sh  himmuc-time-spent.sh  himmuc-weak-scaling.sh  maimuc-threads-render.sh  maimuc-threads.sh
res/: brains.data
src/: Brain.cpp  Brain.h  CMakeLists.txt  Constants.h  Entity.cpp  Entity.h  FoodEntity.cpp  FoodEntity.h  Lfsr.h  LivingEntity.cpp  LivingEntity.h  Log.h  Main.cpp  Matrix.cpp  Matrix.h  Renderer.cpp  Renderer.h  Rng.cpp  Rng.h  Structs.h  Tile.cpp  Tile.h  World.cpp  World.h
src/SimplexNoise/: CMakeLists.txt  SimplexNoise.cpp  SimplexNoise.h
tensorflow/: trainer.py  visualizer.py
utils/: average-logs.sh  build.sh  collect-svg.sh  debug.sh  deploy.sh  init.sh  profile-himmuc.sh  profile-local.sh  profile-maimuc.sh  run.sh  stackcollapse-perf.pl  sum-logs.sh
